[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/assets/fonts/font_sinsgold.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/assets/fonts/font_m3x6.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/assets/sprites/ui/menu_frame4.png" type="Texture" id=3]
[ext_resource path="res://src/assets/sprites/inventory/default.png" type="Texture" id=4]
[ext_resource path="res://src/scripts/global/menu/MenuEquip.gd" type="Script" id=5]
[ext_resource path="res://src/scenes/ui/components/StatsBoxDiff.tscn" type="PackedScene" id=6]

[node name="Equip" type="Control"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 164.0
rect_min_size = Vector2( 320, 164 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grids" type="Control" parent="."]
margin_left = 12.0
margin_top = 20.0
margin_right = 218.0
margin_bottom = 108.0
rect_min_size = Vector2( 208, 88 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="Control" parent="Grids"]
margin_bottom = 88.0
rect_min_size = Vector2( 0, 88 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapons" type="GridContainer" parent="Grids/Box"]
margin_right = 208.0
rect_min_size = Vector2( 208, 0 )
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subweps" type="GridContainer" parent="Grids/Box"]
margin_left = 224.0
margin_right = 432.0
rect_min_size = Vector2( 208, 0 )
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor" type="GridContainer" parent="Grids/Box"]
margin_left = 452.0
margin_right = 660.0
rect_min_size = Vector2( 208, 0 )
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spells" type="GridContainer" parent="Grids/Box"]
margin_left = 680.0
margin_right = 888.0
rect_min_size = Vector2( 208, 0 )
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Control" parent="."]
margin_top = 128.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="NinePatchRect" parent="Description"]
margin_left = 4.0
margin_top = -12.0
margin_right = 316.0
margin_bottom = 40.0
texture = ExtResource( 3 )
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="Description"]
margin_left = 16.0
margin_top = -2.0
margin_right = 48.0
margin_bottom = 30.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Description"]
margin_left = 56.0
margin_top = -7.0
margin_right = 109.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "Vampire Killer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescText" type="Label" parent="Description"]
margin_left = 56.0
margin_top = 6.0
margin_right = 238.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = -1
text = "Lorem ipsum dolor sit amet,
lorem ipsum dolor sit amet."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsBoxDiff" parent="." instance=ExtResource( 6 )]
margin_left = 236.0
margin_top = 20.0
margin_right = 236.0
margin_bottom = 20.0

[node name="TweenTab" type="Tween" parent="."]

[node name="TweenGrid" type="Tween" parent="."]
